@@ -5,7 +5,7 @@
    <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
    <title>Vegastrike - Alexander's Page</title>
 </head>
-<BODY  bgcolor="#000000" text="#C0C0C0" link="#00BB33" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
+<body text="#C0C0C0" bgcolor="#000000" link="#00BB33" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
 
 <h1>
 <a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
@@ -29,7 +29,7 @@ Homepage' because I don't like Vegastrike's Homepage.
 <a href="installing.html">Installing</a></li>
 
 <li>
-<a href="playing.html">Playing</a></li>
+<a href="player_tutorial/index.html">Playing</a></li>
 
 <li>
 <a href="http://sourceforge.net/projects/vegastrike/">Project Page on Sourceforge</a></li>
