@@ -5,7 +5,7 @@
    <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
    <title>Vegastrike - Installing</title>
 </head>
-<body text="#C0C0C0" bgcolor="#000000" link="#00BB33" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
+<body text="#000000" bgcolor="#CCCCCC" link="#00BB33" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
 
 <h1>
 <a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
@@ -13,31 +13,74 @@ Installing Vegastrike&nbsp;&nbsp;&nbsp;&nbsp; <font size=+0><a href="index.html"
 Index</a></font></h1>
 
 <hr WIDTH="100%">
-<br>&nbsp;
+<h4>
+Hardware requirements:</h4>
+
+<ul>
+<li>
+200Mhz CPU or better</li>
+
+<li>
+3D accelerated graphics card</li>
+
+<li>
+optional:</li>
+
+<ul>
+<li>
+(3D) sound card</li>
+
+<li>
+joystick</li>
+</ul>
+</ul>
+
 <h2>
 Installing Vegastrike on Linux:</h2>
-1. go to the download page and download from there the latest unixdata
+to be able to run Vegastrike on Linux, you need to have hardware-accelerated
+3D rendering (mesa-software rendering will be too slow) installed.
+<p>The binary contains the libraries Vegastrike needs to run, please <a href="mailto:vegastrike-users@lists.sourceforge.net">contact
+us</a> if it doesn't work on your machine.
+<p>this description is valid for Vegastrike-0.2.0:
+<p>1. go to the download page and download from there the latest unixdata
 tar file and the latest linux binary
 <p>2. extract the binary to a directory of your choice
-<br>&nbsp;&nbsp;&nbsp; example: tar zxf ../vegastrike-0.1.3-x86-linux.tar.gz
+<br>&nbsp;&nbsp;&nbsp; example: tar zxf ../vegastrike-0.2.0-x86-linux.tar.gz
 <p>3. cd to the created subdirectory
-<br>&nbsp;&nbsp;&nbsp; cd vegastrike-0.1.3
+<br>&nbsp;&nbsp;&nbsp; cd vegastrike-0.2.0
 <p>4. extract the content from the unixdata tarball into this directory:
-<br>&nbsp;&nbsp;&nbsp; tar zxf ../vegastrike_unixdata-0.1.3.tgz
+<br>&nbsp;&nbsp;&nbsp; tar zxf ../vegastrike_unixdata-0.2.0.tgz
 <p>5. then cd to the data directory
-<p>6. to start vegastrike, type
-<br>&nbsp;&nbsp;&nbsp; ./vegastrike.sh &lt;mission-file>
-<p>&nbsp;&nbsp;&nbsp; Examples:&nbsp; ./vegastrike.sh mission/earth_patrol1.mission
+<p>6. first, you have to configure Vegastrike to match your system/cpu/gfx
+card etc
+<br>&nbsp;&nbsp;&nbsp; type
+<br>&nbsp;&nbsp;&nbsp; ./vssetup
+<p>&nbsp;&nbsp;&nbsp; The vssetup dialog will pop up where you can select
+your preferences.
+<p>7. to start Vegastrike with the Mission Selector, type
+<br>&nbsp;&nbsp;&nbsp; ./vsselect
+<p>&nbsp;&nbsp;&nbsp; A dialog will pop up that shows you a list of all
+available missions.
+<br>&nbsp;&nbsp;&nbsp; Select one and then click 'run mission'&nbsp; and
+Vegastrike will start
+<p>&nbsp;8. you can also start Vegastrike from shell without using the
+Mission Selector
+<br>&nbsp;&nbsp;&nbsp; type
+<br>&nbsp;&nbsp;&nbsp; ./vegastrike &lt;mission-name>
+<p>&nbsp;&nbsp;&nbsp; Examples:&nbsp; ./vegastrike mission/earth_patrol1.mission
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-./vegastrike.sh mission/ships_confed1.mission
-<p>&nbsp; Please <a href="mailto:alexannika@users.sourceforge.net">send
-me Email</a> if you're having any problems.
+./vegastrike mission/ships_confed1.mission
+<p>&nbsp;&nbsp;&nbsp; Use as argument any of the missions in ./mission
+<p>&nbsp; Please <a href="mailto:vegastrike-users@lists.sourceforge.net">send
+us Email</a> if you're having any problems.
 <br>&nbsp;
 <h2>
 Installing Vegastrike on Win32:</h2>
 1. download the windows binary zip file
 <p>2. unzip the file in a directory of your choice
-<p>&lt;more to come soon>
+<p>3. If you miss something here - write that bit of docu for us, please
+:-)
+<br>&nbsp;
 <p>
 <hr WIDTH="100%">
 <p>this page maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
