@@ -15,7 +15,7 @@
 <tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="download.html" >Download</a></Font></td></tr>
 <tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="texturizer/index.html" >Texturizer Howto</a></Font></td></tr>
 <tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="installing.html" >Installing</a></Font></td></tr>
-<tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="playing.html" >Playing</a></Font></td></tr>
+<tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="player_tutorial/index.html" >Playing</a></Font></td></tr>
 <tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="alex-index.html" >Alex's Page</a></Font></td></tr>
 <tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="links.html" >Links</a></Font></td></tr>
 <tr><td> <FONT FACE="Arial, Helvetica, Geneva" SIZE="+0"><a target="main" href="http://sourceforge.net/projects/vegastrike/" >SF Project</a></Font></td></tr>
