@@ -5,7 +5,7 @@
    <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
    <title>Vegastrike - Playing Howto</title>
 </head>
-<body text="#C0C0C0" bgcolor="#000000" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
+<body text="#000000" bgcolor="#CCCCCC" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
 
 <h1>
 <a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
@@ -16,18 +16,56 @@ Index</a></font></h1>
 <br>&nbsp;
 <h2>
 Starting Vegastrike:</h2>
-to start Vegastrike, you have to cd to the data directory and then:
-<p>./vegastrike.sh &lt;mission-name>
-<p>Exaamples:&nbsp; ./vegastrike.sh mission/earth_patrol1.mission
+to start Vegastrike, you have to cd to the data directory and then start
+the Mission Selector:
+<p>./vsselect
+<p>A dialog will pop up, you can select a mission from the list, and then
+click 'run mission'
+<p>Or start Vegastrike from shell:
+<p>./vegastrike [-j&lt;system-name>] &lt;mission-file>
+<p>Mission file has to be a file from the ./mission directory
+<br>System name is an optional system name to use instead of the missions
+default system
+<p>Examples:&nbsp; ./vegastrike mission/earth_patrol1.mission
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-./vegastrike.sh mission/ships_confed1.mission
+./vegastrike mission/ships_confed1.mission
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-./vegastrike.sh mission/test/test4.mission
+./vegastrike mission/test/test4.mission
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+./vegastrike -jsol_sector/Sol mission/explore_universe_neutral.mission
 <br>&nbsp;
 <h2>
 Configuring Vegastrike:</h2>
-Vegastrike can be configured by editing the file 'vegastrike.config' file
-in the data directory.
+Before first start, you should use vssetup to configure Vegastrike for
+your needs - cpu speed, graphics card etc
+<p>Start vssetup from the data dir with
+<br>&nbsp;&nbsp;&nbsp; ./vssetup
+<p>A dialog will pop up where you can select
+<ul>
+<li>
+your cpu speed,</li>
+
+<li>
+your type of gfx card</li>
+
+<li>
+your sound preferences</li>
+
+<li>
+game difficulty</li>
+
+<li>
+experimental settings</li>
+</ul>
+Select the buttons which match your computer/your preferences best and
+click 'done'.
+<p>You can the start Vegastrike and see if you like the settings, if not,
+you can start vssetup again and choose different settings.
+<br>&nbsp;
+<p>Vegastrike can also be configured by editing the file 'vegastrike.config'
+file in the data directory.
+<p>Editing the 'vegastrike.config' by hand gives you more granularity in
+your choices than using vssetup.
 <p>You can configure Key- and Joystickbindings there, and adjust Vegastrike's
 config variables to match your computers speed.
 <br>&nbsp;
@@ -44,37 +82,77 @@ When the game starts, you should be sitting in a cockpit of a space fighter.
 <p>For more keys, have a look at the vegastrike.config file
 <p>On your radar, you can see enemy and friendly ships.
 <br>Enemies are red dots, friends are green.
-<p>&lt;more to come soon>
+<br>&nbsp;
+<br>&nbsp;
+<h4>
+Keyboard Controls:</h4>
+taken from Daniel Horn's README:
+<p>Arrow keys: Flight Sim style turning
+<br>\ full throttle
+<br>backspace zero throttle
+<br>=,+ accel
+<br>- decel
+<br>ENTER fire missile
+<br>space Fire Guns
+<br>backspace&nbsp; stop
+<br>TAB Afterburners
+<br>j engage interstellar warp drive (use at clear blue balls)
+<br>*,ins Spin Right
+<br>/,del Spin Left
+<br>~ (hold down, engage shelton slide)
+<br>y match speed
+<br>t target
+<br>p target nearest to center of screen
+<br>n target enemy targetting you
+<br>T target enemies for your turret
+<br>m change active missile
+<br>g change active gun
+<br>v switch targetting computer mode to navigation mode and then view
+mode
+<br>w switch left targetting cpu
+<br>Shift-W shift weapons computer mode to damage mode
+<br>&nbsp;
+<br>F1 toggle cockpit/background display
+<br>F2 left
+<br>F3 right
+<br>F4 back
+<br>F5 Chasecam
+<br>F6 Panning Cam (s,a,w,z pan)
+<br>F7 Target Cam
+<br>F8 Strange Cam
+<br>F9 Increase Time Compression
+<br>F10 Reset Time Compression
+<br>F11 Zoom in
+<br>F12 Zoom out
+<br>&nbsp;
+<br>a,d,w,z pan ghost cam
+<br>&nbsp;
+<br>: respawn -- use after death to recreate your starship
+<br>[ switch ships in battle (use to control allies)
 <br>&nbsp;
 <br>&nbsp;
 <h2>
 Playable Missions :</h2>
-
+Currently, Vegastrike can be played in two different ways:
 <ul>
 <li>
-The missions in the data/mission folder should be playable.</li>
+play any of the missions named 'explore_universe' or alike</li>
 
+<br>These missions lets you play in a big, random generated universe
+<br>Your task is it to fly through the system, explore and enjoy it, fight
+random enemies or help friends defend themselves
+<br>You can fly through jumppoints to other systems and explore them, too
 <li>
-mission/test contains test missions and</li>
+play a 'battle mission'</li>
 
-<br>mission/testd contains test missions for the new director
-<br>those might work or not</ul>
-Overview of the missions in data/mission (valid for vegastrike-snapshot-020117):
-<ul>
-<li>
-earth_patrol1</li>
+<br>in a battle mission, you have a certain setting in a special system,
+where you have to battle incoming enemies or defend your installations
+<br>the main task is to survive...</ul>
 
-<br>lets you fly around the earth and experience the terrain
-<br>just fly straight to and into earth, try to crash your ship into the
-earth globe - and then you'll see the terrain
-<li>
-earth_defender1</li>
-
-<br>defend earth from the bad aera
-<li>
-earth_defend_cruiser1,earth_defend_cruiser2</li>
-
-<br>defend a cruiser in earth range from the aera attack
+<ul>&nbsp;</ul>
+Overview of the 'battle' missions in data/mission (valid for vegastrike-0.2.0):
+<p>&nbsp;recommended:
+<blockquote>
 <li>
 earth_patrol_rnd_attack1</li>
 
@@ -96,6 +174,44 @@ total_war2</li>
 
 <br>as above - but you're confed now (and get attacked)
 <li>
+bomber</li>
+
+<br>fly a bombing run onto some cruisers
+<li>
+drone_duel</li>
+
+<br>you have to battle an alien drone, but your weapons are ineffective
+<br>you have to first find a secret hidden in an asteroid field...
+<li>
+nebula_tag</li>
+
+<br>fight the computer AI in a nebula - your radar won't work in the nebula
+<li>
+proving_grounds, proving_grounds_simple</li>
+
+<br>you have to fight computer AIs and collect powerups
+<li>
+tag, tag2</li>
+
+<br>there are many jumppoints in this mission
+<br>use them wisely to gain advantage over your enemies</blockquote>
+still in development:
+<ul>
+<li>
+earth_patrol1</li>
+
+<br>lets you fly around the earth and experience the terrain
+<br>just fly straight to and into earth, try to crash your ship into the
+earth globe - and then you'll see the terrain
+<li>
+earth_defender1</li>
+
+<br>defend earth from the bad aera
+<li>
+earth_defend_cruiser1,earth_defend_cruiser2</li>
+
+<br>defend a cruiser in earth range from the aera attack
+<li>
 launch_and_launch1</li>
 
 <br>sort-of a stresstest - really lots of ships get launched very fast
@@ -110,7 +226,30 @@ ships_confed1,ships_confed2</li>
 <li>
 station_defend1,station_defend2</li>
 
-<br>defend a space station from the aera</ul>
+<br>defend a space station from the aera
+<li>
+asteroid_field1</li>
+
+<br>fight enemies inside and around an asteroid field
+<li>
+station_cruiser_defend2</li>
+
+<br>defend your station and cruiser against an enemy attack
+<li>
+tutorial1_flying</li>
+
+<br>a basic tutorial on flying, still in development
+<br>&nbsp;</ul>
+
+<blockquote>
+<li>
+The missions in the data/mission folder should be playable.</li>
+
+<li>
+mission/test contains test missions and</li>
+
+<br>mission/testd contains test missions for the new director
+<br>those might work or not</blockquote>
 
 <p><br>
 <hr WIDTH="100%">
