@@ -1,3 +1,11 @@
+2002-02-21 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* updated documentation/homepage
+	  - updated install page
+	  - started to write a player tutorial
+	* updated some of my missions (author/description tags)
+
+	
 2002-02-19 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* new callbacks:
